@@ -2,6 +2,7 @@ cm4all-workshop (4.0.1) unstable; urgency=low
 
   * require PostgreSQL 9.6 or later
   * fix "std::bad_alloc" error after database connection loss
+  * workshop: add column `time_started`
 
  --   
 
